# Lab-OOT-Spring-2022

./: .gitignore  CMakeLists.txt  Design.md  README.md  main.cpp  script.txt
files/: asciis.h  testcase.md
include/: asciis.h  board.h  canvas.h  char_lib.h  cmd_invoker.h  cmd_parser.h  cmd_phaser.h  command.h  coordinate.h  draw.h  gray_scale.h
run/: result.txt
run/testcases/: script1.txt
src/: board.cpp  canvas.cpp  char_lib.cpp  cmd_invoker.cpp  cmd_parser.cpp  cmd_phaser.cpp  command.cpp  draw.cpp  gray_scale.cpp  main.cpp
test/: test.cpp
test/color_cmd/: test1-g2_result.txt  test2-g256.txt  test2-g256_result.txt
test/general/: script-g256.txt  script-g256_result.txt  script1-g2_result.txt  script2-g256.txt  script2-g256_result.txt  script3-g256_result.txt  script3.txt  test_out.txt
test/line_cmd/: script.txt  test1-g2.txt  test1-g2_result.txt  test2-g256.txt  test2-g256_result.txt  test_line.cpp  test_out.txt  test_result.txt
test/macro_cmd/: test-g256.txt  test-g256_result.txt
test/text_cmd/: test-g256.txt  test-g256_result.txt
